--- a/get-started/agentic-builders/facilitators.mdx
+++ b/get-started/agentic-builders/facilitators.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Facilitators on SKALE"
-description: "Facilitators on SKALE"
+description: "Explore the available facilitators on SKALE and how they support x402"
 ---
 
-Facilitators are infrastructure providers in the x402 protocol that enable seamless cross-chain payment processing. They handle the complexity of blockchain interactions, allowing developers to accept payments across multiple networks without managing API keys or dealing with blockchain infrastructure directly. 
+The facilitation process in x402 -- verification and settlement of payments -- is critical to ensuring the resource is paid for properly. While the process is 100% self-hostable by the seller, hosted facilitators like PayAI and x402 reduce the scope of integration into x402 by letting sellers of resources quickly and easily accept payments without any knowledge of blockchain, sending transactions, or gas fees.
 
-On SKALE, facilitators support both SKALE Base and SKALE Base Sepolia networks, providing a drop-in solution for payment processing.
+On SKALE, facilitators support both SKALE Base (Mainnet) and SKALE Base Sepolia (Testnet) networks, providing a drop-in solution for processing x402 payments.
 
 ## Available Facilitators
 
@@ -14,10 +14,14 @@ On SKALE, facilitators support both SKALE Base and SKALE Base Sepolia networks, 
 | PayAI | https://facilitator.payai.network | [PayAI Demo](/cookbook/facilitators/using-payai) |
 | x402x | https://facilitator.x402x.dev/ | [x402x Demo](/cookbook/facilitators/using-x402x) |
 
+<Note>
+Does your facilitator support SKALE? Submit a PR at https://github.com/skalenetwork/docs.skale.space and add your facilitator!
+</Note>
+
 ## Run your own
 
-<CardGroup cols={2}>
-  <Card title="Run Your Own" icon="server" href="/cookbook/x402/facilitator">
-    Deploy your own facilitator
-  </Card>
-</CardGroup>
+Prefer to run your own facilitator? Checkout the detailed documentation [here](/cookbook/x402/facilitator).
+
+<Note>
+This does require blockchain knowledge and compute credits/sFUEL depending on your chain, but you can reach the team in Discord at https://discord.gg/skale for support!
+</Note>
