feat: add Kobaru x402 facilitator

--- a/get-started/agentic-builders/facilitators.mdx
+++ b/get-started/agentic-builders/facilitators.mdx
@@ -11,6 +11,7 @@ On SKALE, facilitators support both SKALE Base (Mainnet) and SKALE Base Sepolia 
 
 | Name | Endpoint | Cookbook Demo |
 |-----------------|---------------------|---------------|
+| Kobaru | https://gateway.kobaru.io/ | [Kobaru Demo](/cookbook/facilitators/using-kobaru) |
 | PayAI | https://facilitator.payai.network | [PayAI Demo](/cookbook/facilitators/using-payai) |
 | x402x | https://facilitator.x402x.dev/ | [x402x Demo](/cookbook/facilitators/using-x402x) |
 
