Adding corbits to docs

--- a/cookbook/facilitators/using-payai.mdx
+++ b/cookbook/facilitators/using-payai.mdx
@@ -197,7 +197,7 @@ Common causes and solutions:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Using x402x" icon="layer-group" href="/cookbook/x402/using-x402x">
+  <Card title="SKALE Supported Facilitators" icon="dollar-sign" href="/get-started/agentic-builders/facilitators">
     Alternative facilitator with advanced features
   </Card>
   <Card title="Run Your Own" icon="server" href="/cookbook/x402/facilitator">
