--- a/cookbook/facilitators/using-x402x.mdx
+++ b/cookbook/facilitators/using-x402x.mdx
@@ -178,7 +178,7 @@ Common causes and solutions:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Using PayAI" icon="dollar-sign" href="/cookbook/x402/using-payai">
+  <Card title="SKALE Supported Facilitators" icon="dollar-sign" href="/get-started/agentic-builders/facilitators">
     Alternative hosted facilitator service
   </Card>
   <Card title="Run Your Own" icon="server" href="/cookbook/x402/facilitator">
