--- a/get-started/agentic-builders/facilitators.mdx
+++ b/get-started/agentic-builders/facilitators.mdx
@@ -12,7 +12,8 @@ On SKALE, facilitators support both SKALE Base (Mainnet) and SKALE Base Sepolia 
 | Name | Endpoint | Cookbook Demo |
 |-----------------|---------------------|---------------|
 | PayAI | https://facilitator.payai.network | [PayAI Demo](/cookbook/facilitators/using-payai) |
-| x402x | https://facilitator.x402x.dev/ | [x402x Demo](/cookbook/facilitators/using-x402x) |
+| x402x | https://facilitator.x402x.dev | [x402x Demo](/cookbook/facilitators/using-x402x) |
+| Corbits | https://facilitator.corbits.dev | [Corbits Demo](/cookbook/facilitators/using-corbits) |
 
 <Note>
 Does your facilitator support SKALE? Submit a PR at https://github.com/skalenetwork/docs.skale.space and add your facilitator!
